# ptchecker

./: Cargo.toml  README.md  automaton.dot  epsilon.dot  out
data/SatelliteMemory-PT-X00010Y0003/: CTLFireability.txt  GenericPropertiesVerdict.xml  LTLCardinality.txt  LTLFireability.txt  LTLFireability.xml  ReachabilityFireability.txt  ReachabilityFireability.xml  UpperBounds.txt  UpperBounds.xml  model.pnml
data/SatelliteMemory-PT-X00100Y0003/: CTLCardinality.txt  CTLCardinality.xml  CTLFireability.xml  LTLCardinality.xml  ReachabilityCardinality.txt  ReachabilityCardinality.xml  instance  model1.pnml  model2.pnml
data/SatelliteMemory-PT-X00100Y0003/PaxHeader/: CTLFireability.txt
src/: lib.rs  petri.rs  utils.rs
src/logics/: ctl.rs  mod.rs  parser.rs  transys.rs
src/ltl/: automaton.rs  checker.rs  gba.rs  mod.rs  translator.rs  vwaa.rs
src/petri/: mod.rs  parser.rs
