[package]
name = "ptchecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ptchecker"
path = "src/lib.rs"

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"

[dependencies]
bimap = "0.6.3"
#index_vec = "0.1.3"
#pnets = "0.1.3"
#pnets_pnml = "0.1.0"
#quick-xml = { version = "0.30", features = [ "serialize" ] }
roxmltree = "0.18.1"
#serde-xml-rs = "0.5"
#serde = {version="1.0", features = ["derive"]}
#serde_with = "1.11"